Implements job queue module
sqash me

squash me

squash me

squash me

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,8 @@ flake8-html
 uvicorn[standard]
 fastapi
 rocketry
+motor
+passlib[bcrypt]
+python-jose[cryptography]
+python-multipart
+pydantic-settings
