Changes to satisfy flake

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,22 @@ pytest-pylint
 pytest-reportlog
 flake8-docstrings
 flake8-html
+pep8-naming
+flake8-variables-names
+flake8-fastapi
+flake8-eradicate
+sphinx
+sphinxcontrib-mermaid
+sphinx-rtd-theme
+myst_parser
+linkify-it-py
+docutils
+jinja2
+markdown-it-py
+mdit-py-plugins
+sphinx-rtd-dark-mode
+sphinx-autodoc2
+pyyaml
 uvicorn[standard]
 fastapi
 motor
