--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,17 @@
 flake8
-flake8
 flake8-black
-scipy
-numpy
-pytest
-pytest-flake8
-pytest-html
-pytest-metadata
-pytest-pylint
-pytest-reportlog
 flake8-docstrings
 flake8-html
 pep8-naming
 flake8-variables-names
 flake8-fastapi
 flake8-eradicate
+pytest
+pytest-flake8
+pytest-html
+pytest-metadata
+pytest-pylint
+pytest-reportlog
 sphinx
 sphinxcontrib-mermaid
 sphinx-rtd-theme
@@ -26,6 +23,8 @@ markdown-it-py
 mdit-py-plugins
 sphinx-rtd-dark-mode
 sphinx-autodoc2
+scipy
+numpy
 pyyaml
 uvicorn[standard]
 fastapi
@@ -35,4 +34,4 @@ python-jose[cryptography]
 python-multipart
 pydantic-settings
 dacite
-
+pygount
