Revert "Merge branch 'clean_implementation' into 'main'"

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 flake8
 flake8-black
-black
 scipy
 numpy
 pytest
@@ -13,9 +12,4 @@ flake8-docstrings
 flake8-html
 uvicorn[standard]
 fastapi
-motor
-passlib[bcrypt]
-python-jose[cryptography]
-python-multipart
-pydantic-settings
-dacite
+rocketry
